styles.css
/* ... */
section#vvi-section .feature-link>* {
    flex: 1 0 50%;
    align-items: center;
    display: flex;
    justify-content: center;
    padding: 2em 3em;
    min-width: 400px;
}

.feature-link .feature-description {
    background: rgb(39, 93, 118);
    color: #fff;
    transition: background .2s;
}

.feature-button {
    background-image: url(./img/blue-triangles.JPG);
    position: relative;
    z-index: 1;
}

.feature-button::after {
    content: '';
    background: #fff;
    opacity: .4;
    position: absolute;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    z-index: 2;
    transition: opacity .2s;
}

section#vvi-section .feature-link:hover .feature-description {
    background: rgba(39, 93, 118, .9);
}

section#vvi-section .feature-link:hover .feature-button::after {
    opacity: .6;
}

#vvi-logo {
    max-height: 90px;
    position: relative;
    z-index: 3;
    max-width: 100%;
}

/* Hours and Location Section */
section#hours-and-location {
    display: flex;
    font-size: 1.1rem;
    padding: 2em 10%;

    /* padding: 2em calc(30vw - 200px); */
    justify-content: center;
}

section#hours-and-location :not(h3) {
    color: rgb(39, 101, 134) !important;
    font-style: normal;
}

section#hours-and-location a {
    text-decoration: none;
}

section#hours-and-location a:hover {
    text-decoration: underline;
}

.hours-info {
    margin-right: 30px;
    line-height: 1.6;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.hours-info>div {
    margin-bottom: 10px;
}

.location-map iframe {
    width: 55vw;
}

/* ===FOOTER=== */
#cohesion-logo {
    max-height: 115px;
    display: block;
    margin: 0 auto;
    padding: 20px;
}

/* ===CHECKBOX HACK=== */
/* Customize the label (the container) */
.terms-container {
    display: block;
    position: relative;
    padding-left: 35px;
    margin-bottom: 12px;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* Hide the browser's default checkbox */
.terms-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

/* Create a custom checkbox */
.checkmark {
    position: absolute;
    top: 0;
    left: 0;
    height: 20px;
    width: 20px;
    background-color: rgba(255, 255, 255, .1);
    border: 1px solid rgba(255, 255, 255, .4)
}

/* On mouse-over, add a grey background color */
.terms-container:hover input~.checkmark {
    background-color: rgba(255, 255, 255, .4);
}

/* When the checkbox is checked, add a blue background */
.terms-container input:checked~.checkmark {
    background-color: #2196F3;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.terms-container input:checked~.checkmark:after {
    display: block;
}

/* Style the checkmark/indicator */
.terms-container .checkmark:after {
    left: 5px;
    top: 1px;
    width: 5px;
    height: 10px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

/* ===POPOVER=== */
.popover-title {
    color: rgb(255, 253, 84);
}

.popover-title:hover {
    text-decoration: underline;
}

.popover-wrapper {
    position: relative;
    display: inline-block;
}

.popover-content {
    display: none;
    position: absolute;
    background-color: #FFFAFA;
    padding: 1.5rem;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
    min-width: 400px;
    color: rgb(39, 101, 134);
}

.popover-wrapper:hover .popover-content {
    display: block;
    z-index: 10;
    bottom: calc(100% + 10px);
}

/* ===COVID Alert=== */
.covid-alert {
    padding: 6px 12px;
    background-color: #ff9800;
    color: #fff;
    text-align: center;
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
}

#covid-button {
    background-color: transparent;
    color: #fff;
    border: 1px solid #fff;
    border-radius: 1px;
    padding: 2px 6px;
    margin-left: 10px;
    margin-right: 30px;
    cursor: pointer;
    transition: background-color .2s;
}

#covid-button:hover {
    background-color: rgba(255, 255, 255, .2);
    cursor: pointer;
}

#alert-dismiss {
    position: absolute;
    right: 12px;
    color: #fff;
    background-color: transparent;
    cursor: pointer;
    border: 0px solid transparent;
    font-size: 1.3em;
    border-radius: 1px;
    transition: background-color .2s;

}

#alert-dismiss:hover {
    background-color: rgba(255, 255, 255, .2);
    cursor: pointer;
}

/* ===COVID Statement Modal=== */
.statement-container {
    position: fixed;
    opacity: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    z-index: 99;
    background-color: rgba(0, 0, 0, 0.6);
    overflow: auto;
    transition: all .3s;
}

.statement-container.closed {
    display: none;
    opacity: 0;
}

.statement-content {
    margin: 15% auto;
    background: #fff;
    max-width: 800px;
    padding: 20px;
}

.statement-header {
    color: rgb(39, 101, 134);
    font-size: 1.8em;
    display: flex;
    padding-bottom: 10px;
    justify-content: space-between;
}

.statement-close {
    background-color: transparent;
    cursor: pointer;
    border: 0px solid transparent;
    border-radius: 1px;
    font-size: .9em;
    transition: background-color .2s;
}

.statement-close:hover {
    cursor: pointer;
    background-color: rgba(0, 0, 0, 0.3);

}

.statement-body {
    font-size: 1.1em;
    line-height: 1.3;
}

#burger,
label[for="burger"] {
    display: none;
}

#hamburger-sc-logo {
    display: none;
    margin-top: 20px;
    max-height: 100px;
    max-width: calc(100% - 100px);
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 15px;
}
/* ... */

